# ros2_pluginlib_example

./: README.md
base_interface/: CMakeLists.txt  package.xml
base_interface/include/base_interface/: base_interface.hpp
plugin_loader/: CMakeLists.txt  main.cpp  package.xml
plugin_loader/launch/: plugin_loader.launch.xml
user_defined_plugin/: CMakeLists.txt  package.xml  plugins.xml  user_defined_plugin.cpp
